# django_practice_poll

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
mysite/mysite/: settings.py
