[tool.poetry]
name = "django_practice_poll"
version = "0.1.0"
description = ""
authors = ["ymidori <ccm.penaei@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.6"
Django = "^3.2.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
